# gnome-control-center

./: configure.ac
panels/: Makefile.am
panels/common/: Makefile.am
panels/connman/: Makefile.am  cc-connman-enum-types.c.in  cc-connman-enum-types.h.in  cc-connman-manager.xml  cc-connman-panel.c  cc-connman-panel.h  cc-connman-service.xml  cc-connman-technology.xml  cc-technology.c  cc-technology.h  connman-module.c  connman.ui  gnome-connman-panel.desktop.in.in
panels/display/: display-capplet.ui
shell/: Makefile.am  gnome-control-center.c
